--- a/src/index.css
+++ b/src/index.css
@@ -7,29 +7,58 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  max-width: 500px;
+  margin: 30px auto;
+  overflow: auto;
+  min-width: 300px;
+  border: 1px solid steelblue;
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .btn{
-  --display: inline-block;
-  color:white;
+  display: inline-block;
+  background: #000;
+  color:#fff;
   border: none;
   padding: 10px 20px;
   margin: 5px;
   border-radius: 5px;
+  cursor: pointer;
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
-  cursor: pointer;
 }
 
 .btn:focus{
-  --outline: none;
+  outline: none;
 }
 
 .btn:active{
-  --display: block;
-  --width: 100%;
+  transform: scale(0.98);
+}
+
+.task{
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
